<resources>
    <string name="app_name">DinoApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dino App</string>
    <string name="nav_header_subtitle">Equipo dinamita</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="dinoTitulo">Lista de dinos</string>

    <string name="nombreDino">Nombre</string>
    <string name="pronunciacionDino">Pronunciacion</string>
    <string name="significadoDino">Significado</string>
    <string name="dietaDino">Dieta</string>
    <string name="alturaDino">Altura</string>
    <string name="periodoDino">Periodo</string>
    <string name="infoDino">Info</string>
</resources>